--- a/index.html
+++ b/index.html
@@ -3,23 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="icon" type="image/x-icon" href="https://www.clipartmax.com/png/small/108-1080712_music-icon-music-icon-16x16-pixels.png">
     <link rel="stylesheet" href="style.css">
+    <title>Travel Ticket Booking</title>
 </head>
 <body>
-    <div class="banner">
-        <div class="navbar">
-            <img src="download-removebg-preview.png" class="logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Perfume</a></li>
-                <li><a href="#">Info</a></li>
-                <li><a href="#">Brands</a></li>
-                <li><a href="#">Rewards</a></li>
-            </ul>
-        </div>
+    <div class="form-container">
+        <h1>Book Your Travel Ticket</h1>
+        <form method="post">
+            <!-- الاسم -->
+            <label for="name">Full Name:</label>
+            <input type="text" id="name" name="name" required placeholder="Enter your full name">
+
+            <!-- البريد الإلكتروني -->
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required placeholder="Enter your email">
+
+            <!-- رقم الهاتف -->
+            <label for="phone">Phone Number:</label>
+            <input type="tel" id="phone" name="phone" required placeholder="Enter your phone number">
+
+            <!-- العمر -->
+            <label for="age">Age:</label>
+            <input type="number" id="age" name="age" required placeholder="Enter your age" min="1" max="100">
+
+            <!-- الدولة التي يسافر إليها -->
+            <label for="country">Destination Country:</label>
+            <select id="country" name="country" required>
+                <option value="" disabled selected>Select your destination</option>
+                <option value="USA">USA</option>
+                <option value="UK">UK</option>
+                <option value="Germany">Germany</option>
+                <option value="France">France</option>
+                <option value="Japan">Japan</option>
+                <!-- يمكنك إضافة المزيد من الدول -->
+            </select>
+
+            <!-- تاريخ المغادرة -->
+            <label for="departure">Departure Date:</label>
+            <input type="date" id="departure" name="departure" required>
+
+            <!-- تاريخ العودة -->
+            <label for="return">Return Date:</label>
+            <input type="date" id="return" name="return">
+
+            <!-- درجة السفر -->
+            <label for="class">Travel Class:</label>
+            <select id="class" name="class" required>
+                <option value="" disabled selected>Select your travel class</option>
+                <option value="economy">Economy</option>
+                <option value="business">Business</option>
+                <option value="first">First Class</option>
+            </select>
+
+            <!-- طريقة الدفع -->
+            <label for="payment">Payment Method:</label>
+            <select id="payment" name="payment" required>
+                <option value="" disabled selected>Select your payment method</option>
+                <option value="credit-card">Credit Card</option>
+                <option value="paypal">PayPal</option>
+                <option value="bank-transfer">Bank Transfer</option>
+            </select>
+
+            <!-- زر الإرسال -->
+            <input type="submit" value="Book Now">
+        </form>
     </div>
-    <p>Lorem ipsum dolor</p>
 </body>
 </html>
