--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
     <title>Travel Ticket Booking</title>
 </head>
 <body>
+    <audio autoplay loop>
+        <source  src="Muhab - Warda ورده.weba" type="audio/mp3">
+        Your browser does not support the audio element.
+
+    </audio>
+    
     <div class="form-container">
         <h1>Book Your Travel Ticket</h1>
         <form method="post">
-            <!-- الاسم -->
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required placeholder="Enter your full name">
 
-            <!-- البريد الإلكتروني -->
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required placeholder="Enter your email">
 
-            <!-- رقم الهاتف -->
             <label for="phone">Phone Number:</label>
             <input type="tel" id="phone" name="phone" required placeholder="Enter your phone number">
 
-            <!-- العمر -->
             <label for="age">Age:</label>
             <input type="number" id="age" name="age" required placeholder="Enter your age" min="1" max="100">
 
-            <!-- الدولة التي يسافر إليها -->
             <label for="country">Destination Country:</label>
             <select id="country" name="country" required>
                 <option value="" disabled selected>Select your destination</option>
@@ -35,18 +36,14 @@
                 <option value="Germany">Germany</option>
                 <option value="France">France</option>
                 <option value="Japan">Japan</option>
-                <!-- يمكنك إضافة المزيد من الدول -->
             </select>
 
-            <!-- تاريخ المغادرة -->
             <label for="departure">Departure Date:</label>
             <input type="date" id="departure" name="departure" required>
 
-            <!-- تاريخ العودة -->
             <label for="return">Return Date:</label>
             <input type="date" id="return" name="return">
 
-            <!-- درجة السفر -->
             <label for="class">Travel Class:</label>
             <select id="class" name="class" required>
                 <option value="" disabled selected>Select your travel class</option>
@@ -55,7 +52,6 @@
                 <option value="first">First Class</option>
             </select>
 
-            <!-- طريقة الدفع -->
             <label for="payment">Payment Method:</label>
             <select id="payment" name="payment" required>
                 <option value="" disabled selected>Select your payment method</option>
@@ -64,7 +60,6 @@
                 <option value="bank-transfer">Bank Transfer</option>
             </select>
 
-            <!-- زر الإرسال -->
             <input type="submit" value="Book Now">
         </form>
     </div>
